# ndp-cookie

./: .tmuxinator  README.md  cookiecutter.json
scripts/: system.sh
{{cookiecutter.__project_slug}}/: .env.example  .gitignore  .tmuxinator.yml  README.md  docker-compose.yml  nginx.conf
{{cookiecutter.__project_slug}}/backend/: Dockerfile  pyproject.toml
{{cookiecutter.__project_slug}}/backend/config/: settings.py
{{cookiecutter.__project_slug}}/backend/core/: authentication.py  exceptions.py  urls.py
{{cookiecutter.__project_slug}}/scripts/: install.sh  run.sh  system.sh  utils.sh
{{cookiecutter.__project_slug}}/scripts/git-hooks/: pre-commit  pre-push
{{cookiecutter.project_slug}}/: .env.example  .tmuxinator  README.md  docker-compose.yml  nginx.conf  run.sh
{{cookiecutter.project_slug}}/backend/: Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/backend/config/: settings.py
{{cookiecutter.project_slug}}/backend/core/: views.py
{{cookiecutter.project_slug}}/frontend/pages/: index.js
{{cookiecutter.project_slug}}/frontend/pages/api/: hello.js
