[tool.poetry]
name = "{{cookiecutter.__project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.5"
django = "^4.1.7"
djangorestframework = "^3.14.0"
redis = "^4.5.3"
celery = "^5.2.7"
flake8 = "^6.0.0"
black = "^23.3.0"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"
firebase-admin = "^6.1.0"
django-cors-headers = "^3.14.0"
django-filter = "^23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
